{
    "name": "Excavator_InputActions",
    "maps": [
        {
            "name": "Excavator",
            "id": "a9a3a978-e5d1-480b-98ff-7691112b18aa",
            "actions": [
                {
                    "name": "Throttle",
                    "type": "Button",
                    "id": "613a10a0-1ae3-421b-910f-2c38e474e68e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Brake",
                    "type": "Button",
                    "id": "5d5ed8e0-6d18-4595-b532-5a721dd0fdb2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Steer",
                    "type": "Button",
                    "id": "f5da6fbb-67bd-449b-a968-0b2e03983112",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Drive",
                    "type": "Button",
                    "id": "8bece246-ff0a-4e5c-bce3-6faeab92c0ad",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Bucket",
                    "type": "Button",
                    "id": "6bb0c0a5-c1d6-4e2f-8fb3-5e27396a0cb9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Stick",
                    "type": "Button",
                    "id": "3c8f261e-6b86-4a58-a4e6-4b5d1971b5f0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Boom",
                    "type": "Button",
                    "id": "1a71b492-e6cc-453a-95fb-4e81b42af0e5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Swing",
                    "type": "Button",
                    "id": "d18268c2-7518-4080-b9fe-050745bcfc78",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CustomBucket",
                    "type": "Value",
                    "id": "c6706798-b6d0-477b-b2c5-ae5867ac0e22",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CustomBoom",
                    "type": "Value",
                    "id": "4267043d-e4ce-41fa-a4f0-8c15cca9dce3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CustomSwing",
                    "type": "Value",
                    "id": "60eee62d-0cea-4845-b327-882a75d406e5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CustomStick",
                    "type": "Value",
                    "id": "66739771-466e-493b-91a4-05425edc89c4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8f9f7cbd-e0f1-4a3a-8a41-db1260cae234",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e84d625-4b8e-4df1-85c2-2cc274220c30",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5af14b6c-f29c-4355-8661-712990527f12",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5294270a-1657-4c83-9ff5-5f038ddf0742",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c9ad394-a850-46ba-b419-e874ca9d1fa9",
                    "path": "<Gamepad>/dpad/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05cb28cc-22fc-4101-834b-a6d0fd94688a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d08bb395-0831-4ea8-8c9f-0fd9f7cc800a",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce5418e0-8b1c-4bd6-b274-fc80b76dfd0d",
                    "path": "<XRController>{LeftHand}/gripButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fb4fdaa-09a1-4e97-9759-788c831c5e08",
                    "path": "<XRController>{RightHand}/gripButton",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5499e4a1-7c90-46bd-9824-3909e7367d5d",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "Bucket",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13232eb4-6fd6-4624-81f1-dcb1ecad54de",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Bucket",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65b1580c-767e-4ee6-90f5-b99e93ba03da",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "Bucket",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11c186ce-ec8b-4ae8-96bc-ae6a3fe961f3",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Bucket",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5454dfa6-2195-4b1c-8794-e2fbf682a942",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5eddaf46-0a18-4e4d-8b71-1d2d18e534f3",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca868710-4982-40c7-ab19-d6b3ec4d1fc1",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "Stick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1bb3c6a-550a-4155-911c-f91471211774",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "Boom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a513438-7ca1-4811-a371-c2ef89bc5382",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Boom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8dc91698-7d27-4083-a958-8f9c7034fd97",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "Boom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99f12743-aa33-4eac-a9f2-16ff441a7f07",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aad572f9-98ee-4775-9b03-5e1405a68d1b",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "Swing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75657217-86f9-4ce1-833a-a763c81fb466",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25aceeea-eb0a-480e-a054-7c794cb05bf2",
                    "path": "<Gamepad>/dpad/y",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "Drive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57eaab52-f084-4798-8e8b-cfffe0002bf0",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "Drive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f20b0bd0-5840-498f-a0a1-882ea8afdcea",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c88785b7-ba5e-4948-b198-15c782c9be65",
                    "path": "<XRController>{RightHand}/triggerButton",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "Drive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0527f159-10a7-4f10-ae9f-957744badb13",
                    "path": "<XRController>{LeftHand}/triggerButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b624a64b-9365-47dd-9207-b83dc0e8fd01",
                    "path": "<XRController>{RightHand}/primary2DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CustomBucket",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9eb0e8c-ab66-4aaa-b828-e6d7730ad46f",
                    "path": "<XRController>{RightHand}/primary2DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CustomBoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03beec7c-8bd2-49db-a494-52755b60018b",
                    "path": "<XRController>{LeftHand}/primary2DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CustomSwing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20eca5e3-c5cd-466b-93c9-052373a67c7b",
                    "path": "<XRController>{LeftHand}/primary2DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CustomStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}